# SkylandersGamepadManager

./: BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md
program_info/: CMakeLists.txt  io.github.fifthtundrag.SkylandersGamepadManager.desktop.in  io.github.fifthtundrag.SkylandersGamepadManager.metainfo.xml.in
src/: CMakeLists.txt  ControllerBox.qml  GamepadManagerBridge.cpp  GamepadManagerBridge.h  Main.qml  main.cpp
src/gamepad/: CMakeLists.txt  DeviceDiscovery.h  Gamepad.cpp  Gamepad.h  GamepadManager.cpp  GamepadManager.h  VirtualInputDevice.h  devicediscovery.h  gamepad.cpp  gamepad.h  gamepadmanager.cpp  gamepadmanager.h  virtualinput.h
src/gamepad/linux/: CMakeLists.txt  DeviceDiscoveryLinux.cpp  DeviceDiscoveryLinux.h  GamepadLinux.cpp  GamepadLinux.h  VirtualInputDeviceLinux.cpp  VirtualInputDeviceLinux.h  devicediscovery_linux.cpp  devicediscovery_linux.h  gamepad_linux.cpp  gamepad_linux.h  virtualinput_linux.cpp
src/gamepad/platform/: CMakeLists.txt  device-discovery.h  devicediscovery.h  virtualinput.h
src/gamepad/platform/linux/: CMakeLists.txt  device-discovery_linux.cpp  device-discovery_linux.h  devicediscovery_linux.cpp  devicediscovery_linux.h  virtual-input_linux.cpp  virtual-input_linux.h  virtualinput_linux.cpp  virtualinput_linux.h
